--- a/package.json
+++ b/package.json
@@ -4,15 +4,43 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "clean": "rm -rf .nuxt dist .output dist_build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:fix": "eslint . --fix",
+    "preview": "nuxt preview"
   },
   "dependencies": {
+    "@nuxt/image": "npm:@nuxt/image-nightly@latest",
     "@nuxt/ui": "3.0.0-alpha.12",
-    "nuxt": "^3.15.3",
+    "better-sqlite3": "^11.8.1",
+    "drizzle-orm": "^0.39.1",
+    "h3-zod": "^0.5.3",
+    "nuxt": "^3.15.4",
+    "nuxt-auth-utils": "0.5.10",
+    "sass": "^1.83.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250129.0",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.25",
+    "@iconify-json/uil": "^1.2.3",
+    "@nuxt/content": "^3.0.1",
+    "@nuxt/eslint": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/better-sqlite3": "^7.6.12",
+    "drizzle-kit": "^0.30.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "nitro-cloudflare-dev": "^0.2.1",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^4.0.1",
+    "typescript": "^5.7.3",
+    "vite-plugin-compression": "^0.5.1",
+    "vue-router": "^4.5.0",
+    "wrangler": "^3.107.0"
   }
 }
