--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@cloudflare/workers-types": "^4.20250129.0",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.25",
+    "@iconify-json/simple-icons": "^1.2.22",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/content": "^3.0.1",
     "@nuxt/eslint": "^1.0.0",
@@ -37,10 +38,10 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.1",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "^4.0.2",
     "typescript": "^5.7.3",
     "vite-plugin-compression": "^0.5.1",
     "vue-router": "^4.5.0",
-    "wrangler": "^3.107.0"
+    "wrangler": "^3.107.2"
   }
 }
