--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "clean": "rm -rf .nuxt dist .output dist_build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "i18:update": "node scripts/updateLocale.js",
     "postinstall": "nuxt prepare",
     "lint:fix": "eslint . --fix",
-    "i18:update": "node scripts/updateLocale.js",
     "preview": "nuxt preview"
   },
   "dependencies": {
     "@nuxt/image": "npm:@nuxt/image-nightly@latest",
     "@nuxt/ui": "3.0.0-alpha.12",
+    "@tiptap/extension-bubble-menu": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
     "better-sqlite3": "^11.8.1",
     "drizzle-orm": "^0.39.1",
     "h3-zod": "^0.5.3",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.10",
+    "nuxt-tiptap-editor": "^2.1.4",
     "sass": "^1.83.4",
+    "tiptap-markdown": "^0.8.10",
     "vue": "latest",
     "zod": "^3.24.1"
   },
@@ -40,7 +44,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.1",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.2",
+    "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3",
     "vite-plugin-compression": "^0.5.1",
     "vue-router": "^4.5.0",
