--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-auth-utils": "0.5.10",
     "nuxt-tiptap-editor": "^2.1.4",
     "sass": "^1.83.4",
+    "tiptap-extension-auto-joiner": "^0.1.3",
     "tiptap-markdown": "^0.8.10",
     "vue": "latest",
     "zod": "^3.24.1"
@@ -33,7 +34,7 @@
     "@iconify-json/lucide": "^1.2.25",
     "@iconify-json/simple-icons": "^1.2.23",
     "@iconify-json/uil": "^1.2.3",
-    "@nuxt/content": "^3.0.1",
+    "@nuxt/content": "^3.1.0",
     "@nuxt/eslint": "^1.0.0",
     "@nuxtjs/i18n": "^9.1.5",
     "@tailwindcss/typography": "^0.5.16",
