--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-placeholder": "^2.11.5",
     "drizzle-orm": "^0.39.1",
     "h3-zod": "^0.5.3",
+    "luxon": "^3.5.0",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.10",
     "nuxt-tiptap-editor": "^2.1.4",
