--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "mamoochi"
 pages_build_output_dir = "dist"
 compatibility_flags = [ "nodejs_compat" ]
+compatibility_date = "2024-09-23"
 
 [[d1_databases]]
 binding = "DB"                                       # available in your Worker on env.DB
