--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@nuxt/ui": "3.0.0-alpha.12",
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
-    "drizzle-orm": "^0.39.2",
+    "drizzle-orm": "^0.39.3",
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
+    "nostr-tools": "^2.10.4",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
     "nuxt-tiptap-editor": "^2.1.4",
@@ -27,13 +28,15 @@
     "tiptap-extension-auto-joiner": "^0.1.3",
     "tiptap-markdown": "^0.8.10",
     "vue": "latest",
+    "@noble/curves": "^1.8.1",
+    "@noble/hashes": "^1.7.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.26",
-    "@iconify-json/simple-icons": "^1.2.23",
+    "@iconify-json/simple-icons": "^1.2.24",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/content": "^3.1.0",
     "@nuxt/eslint": "^1.0.1",
@@ -43,8 +46,8 @@
     "eslint": "^9.20.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.1",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.4",
+    "prettier": "^3.5.0",
+    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
     "vite-plugin-compression": "^0.5.1",
     "vue-router": "^4.5.0",
