--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
     "drizzle-orm": "^0.39.3",
+    "echarts": "^5.5.1",
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
     "nostr-tools": "^2.10.4",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
+    "nuxt-echarts": "0.2.4",
     "nuxt-tiptap-editor": "^2.1.4",
     "sass": "^1.84.0",
     "tiptap-extension-auto-joiner": "^0.1.3",
