--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nostr-tools": "^2.10.4",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
+    "nuxt-authorization": "0.3.3",
     "nuxt-tiptap-editor": "^2.1.4",
     "sass": "^1.84.0",
     "tiptap-extension-auto-joiner": "^0.1.3",
