--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     },
     "editor.quickSuggestions": {
         "strings": "on"
-    }
+    },
+    "cSpell.words": [
+        "autoresize"
+    ]
 }
