--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NUXT_SESSION_PASSWORD=092f2092169e44339f73c32e44fa7497
-NUXT_APP_SITE_NAME_FA ='مَموچی'
-NUXT_APP_TITLE_FA ='مَـ موچیــ'
-NUXT_APP_DESCRIPTION_FA ="کوچولو و بازیگوش"
-NUXT_APP_SITE_NAME_EN ='Mamoochi'
-NUXT_APP_TITLE_EN ='Ma moochi'
-NUXT_APP_DESCRIPTION_EN ='Tiny & Playful'
+NUXT_PUBLIC_SITE_NAME_FA ='مَموچی'
+NUXT_PUBLIC_TITLE_FA ='مَـ موچیــ'
+NUXT_PUBLIC_DESCRIPTION_FA ="کوچولو و بازیگوش"
+NUXT_PUBLIC_SITE_NAME_EN ='Mamoochi'
+NUXT_PUBLIC_TITLE_EN ='Ma moochi'
+NUXT_PUBLIC_DESCRIPTION_EN ='Tiny & Playful'
