--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
     "drizzle-orm": "^0.40.0",
+    "fuse.js": "^7.1.0",
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
     "nostr-tools": "^2.10.4",
