--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "tiptap-extension-auto-joiner": "^0.1.3",
     "tiptap-markdown": "^0.8.10",
     "vue": "latest",
+    "y-crossws": "^0.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250303.0",
     "@iconify-json/lucide": "^1.2.28",
-    "@nuxt/content": "^3.2.2",
+    "@nuxt/content": "^3.3.0",
     "@nuxt/eslint": "^1.1.0",
     "@nuxtjs/i18n": "^9.2.1",
     "@tailwindcss/typography": "^0.5.16",
