--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,18 @@
 name = "mamoochi"
 pages_build_output_dir = "dist"
-compatibility_flags = [ "nodejs_compat" ]
+compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-09-23"
 
+[[durable_objects.bindings]]
+name = "$DurableObject"
+class_name = "$DurableObject"
+
+[[migrations]]
+tag = "v1"
+new_classes = ["$DurableObject"]
+
 [[d1_databases]]
-binding = "DB"                                      
+binding = "DB"
 database_name = "mamoochi"
 database_id = "1702648e-6998-4b67-bce2-281bb4622534"
 migrations_dir = "migrations"
-
- 
