--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_date = "2024-09-23"
 [[durable_objects.bindings]]
 name = "$DurableObject"
 class_name = "$DurableObject"
-script_name = "$DurableObject"
+script_name = ""
 
 
 [[d1_databases]]
