--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-floating-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
+    "dexie": "^4.0.11",
     "drizzle-orm": "^0.40.0",
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
@@ -56,7 +57,6 @@
     "wrangler": "^3.114.0"
   },
   "pnpm": {
-    "overrides": {},
     "onlyBuiltDependencies": [
       "better-sqlite3",
       "esbuild",
@@ -65,6 +65,7 @@
       "sharp",
       "vue-demi"
     ],
+    "overrides": {},
     "ignoredBuiltDependencies": []
   }
 }
