dashboard init + permissison flow

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/extension-placeholder": "^2.11.5",
     "dexie": "^4.0.11",
     "drizzle-orm": "^0.40.0",
+    "echarts-liquidfill": "^3.1.0",
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
     "minisearch": "^7.1.2",
@@ -50,6 +51,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.2",
+    "nuxt-echarts": "^0.2.6",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
     "vite-plugin-compression": "^0.5.1",
