--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@noble/curves": "^1.8.1",
     "@noble/hashes": "^1.7.1",
     "@nuxt/image": "npm:@nuxt/image-nightly@latest",
-    "@nuxt/ui": "3.0.0-beta.3",
+    "@nuxt/ui": "3.0.0",
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-floating-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
@@ -40,7 +40,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250303.0",
+    "@cloudflare/workers-types": "^4.20250311.0",
     "@iconify-json/lucide": "^1.2.29",
     "@nuxt/content": "^3.3.0",
     "@nuxt/eslint": "^1.2.0",
@@ -56,7 +56,7 @@
     "typescript": "^5.8.2",
     "vite-plugin-compression": "^0.5.1",
     "vue-router": "^4.5.0",
-    "wrangler": "^3.114.0"
+    "wrangler": "^3.114.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
