--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@noble/hashes": "^1.7.1",
     "@nuxt/image": "npm:@nuxt/image-nightly@latest",
     "@nuxt/ui": "3.0.0",
+    "@nuxtjs/seo": "3.0.0-beta.3",
     "@tiptap/extension-bubble-menu": "^2.11.5",
     "@tiptap/extension-floating-menu": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
