--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@noble/curves": "^1.8.1",
     "@noble/hashes": "^1.7.1",
-    "@nuxt/image": "npm:@nuxt/image-nightly@latest",
+    "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "3.0.0",
     "@nuxtjs/seo": "3.0.1",
     "@tiptap/extension-bubble-menu": "^2.11.5",
@@ -29,7 +29,7 @@
     "h3-zod": "^0.5.3",
     "luxon": "^3.5.0",
     "minisearch": "^7.1.2",
-    "nostr-tools": "^2.10.4",
+    "nostr-tools": "^2.11.0",
     "nuxt": "^3.16.0",
     "nuxt-auth-utils": "0.5.16",
     "nuxt-authorization": "0.3.3",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250313.0",
-    "@iconify-json/lucide": "^1.2.29",
+    "@iconify-json/lucide": "^1.2.30",
     "@nuxt/content": "^3.3.0",
     "@nuxt/eslint": "^1.2.0",
     "@nuxtjs/i18n": "^9.3.1",
@@ -61,9 +61,22 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "better-sqlite3"
+      "better-sqlite3",
+      "sharp"
     ],
-    "overrides": {},
+    "overrides": {
+      "sharp": "0.33.4"
+    },
+    "supportedArchitectures": {
+      "os": [
+        "current",
+        "linux"
+      ],
+      "cpu": [
+        "current",
+        "x64"
+      ]
+    },
     "ignoredBuiltDependencies": []
   }
 }
