--- a/package.json
+++ b/package.json
@@ -4,84 +4,90 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "clean": "rm -rf .nuxt dist .output dist_build",
-    "dev": "nuxt dev",
+    "build": "velite build & nuxt build",
+    "build:local": "node --max-old-space-size=4096 node_modules/nuxt/bin/nuxt.mjs build",
+    "clean": "rm -rf .nuxt dist .output dist_build .data .velite",
+    "dev": "nuxt dev & velite dev",
     "generate": "nuxt generate",
     "i18:update": "node scripts/updateLocale.js",
     "postinstall": "nuxt prepare",
     "lint:fix": "eslint . --fix",
     "preview": "nuxt preview",
-    "reset": "rm -rf .nuxt dist .output dist_build .wrangler .data "
+    "reset": "rm -rf .nuxt dist .output dist_build .wrangler .data .velite "
   },
   "dependencies": {
-    "@noble/curves": "^1.8.1",
-    "@noble/hashes": "^1.7.1",
+    "@noble/curves": "^1.8.2",
+    "@noble/hashes": "^1.7.2",
     "@nuxt/image": "^1.10.0",
+    "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "3.0.2",
-    "@nuxtjs/seo": "3.0.2",
+    "@nuxtjs/mdc": "^0.16.1",
+    "@nuxtjs/seo": "3.0.3",
+    "@nuxtjs/turnstile": "^1.0.0",
     "@tiptap/extension-bubble-menu": "^2.11.7",
     "@tiptap/extension-floating-menu": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.11.7",
     "dexie": "^4.0.11",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.42.0",
     "echarts-liquidfill": "^3.1.0",
     "h3-zod": "^0.5.3",
     "luxon": "^3.6.1",
     "minisearch": "^7.1.2",
     "nostr-tools": "^2.12.0",
     "nuxt": "^3.16.2",
-    "nuxt-auth-utils": "0.5.19",
+    "nuxt-auth-utils": "0.5.20",
     "nuxt-authorization": "0.3.3",
     "nuxt-tiptap-editor": "^2.1.4",
     "sass": "^1.86.3",
     "tiptap-extension-auto-joiner": "^0.1.3",
     "tiptap-markdown": "^0.8.10",
+    "valibot": "^1.0.0",
     "vue": "latest",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250410.0",
-    "@iconify-json/lucide": "^1.2.35",
-    "@nuxt/content": "^3.4.0",
+    "@cloudflare/workers-types": "^4.20250418.0",
+    "@iconify-json/lucide": "^1.2.37",
+    "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
     "@nuxtjs/i18n": "^9.5.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/luxon": "^3.6.2",
-    "drizzle-kit": "^0.30.6",
-    "eslint": "^9.24.0",
+    "drizzle-kit": "^0.31.0",
+    "eslint": "^9.25.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.2",
     "nuxt-echarts": "^0.3.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
+    "velite": "^0.2.2",
     "vite-plugin-compression": "^0.5.1",
     "vue-router": "^4.5.0",
-    "wrangler": "^4.9.1"
+    "wrangler": "^4.12.0"
   },
   "pnpm": {
-    "overrides": {
-      "sharp": "0.33.4"
-    },
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "workerd"
+    ],
     "supportedArchitectures": {
-      "os": [
-        "current",
-        "linux"
-      ],
       "cpu": [
         "current",
         "x64"
+      ],
+      "os": [
+        "current",
+        "linux"
       ]
+    },
+    "overrides": {
+      "sharp": "0.33.4"
     },
     "ignoredBuiltDependencies": [
       "@parcel/watcher",
       "esbuild",
       "sharp",
       "vue-demi"
-    ],
-    "onlyBuiltDependencies": [
-      "better-sqlite3",
-      "workerd"
     ]
   }
 }
