--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@noble/curves": "^1.8.2",
-    "@noble/hashes": "^1.7.2",
+    "@noble/hashes": "^1.8.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/ui": "3.0.2",
@@ -40,7 +40,7 @@
     "nuxt-authorization": "0.3.3",
     "nuxt-delay-hydration": "^1.3.8",
     "nuxt-tiptap-editor": "^2.1.4",
-    "sass": "^1.86.3",
+    "sass": "^1.87.0",
     "tiptap-extension-auto-joiner": "^0.1.3",
     "tiptap-markdown": "^0.8.10",
     "valibot": "^1.0.0",
@@ -48,14 +48,14 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250420.0",
-    "@iconify-json/lucide": "^1.2.37",
+    "@cloudflare/workers-types": "^4.20250422.0",
+    "@iconify-json/lucide": "^1.2.38",
     "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/luxon": "^3.6.2",
     "drizzle-kit": "^0.31.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nitro-cloudflare-dev": "^0.2.2",
     "nuxt-echarts": "^0.3.0",
@@ -69,6 +69,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "better-sqlite3",
+      "unrs-resolver",
       "workerd"
     ],
     "supportedArchitectures": {
