--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/i18n": "9.5.3",
     "@nuxtjs/mdc": "^0.16.1",
     "@nuxtjs/seo": "3.0.3",
+    "@nuxtjs/sitemap": "^7.2.10",
     "@nuxtjs/turnstile": "^1.0.0",
     "@tiptap/extension-bubble-menu": "^2.11.7",
     "@tiptap/extension-floating-menu": "^2.11.7",
