--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/extension-floating-menu": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.11.7",
     "@vueuse/core": "^13.1.0",
+    "better-sqlite3": "^11.9.1",
     "dexie": "^4.0.11",
     "drizzle-orm": "^0.42.0",
     "echarts-liquidfill": "^3.1.0",
