--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "velite build & nuxt build",
     "build:local": "node --max-old-space-size=4096 node_modules/nuxt/bin/nuxt.mjs build",
+    "analyze": "node --max-old-space-size=4096 node_modules/nuxt/bin/nuxt.mjs analyze",
     "clean": "rm -rf .nuxt dist .output dist_build .data .velite",
     "dev": "nuxt dev & velite dev",
     "generate": "nuxt generate",
@@ -52,7 +53,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250425.0",
+    "@cloudflare/workers-types": "^4.20250426.0",
     "@iconify-json/lucide": "^1.2.39",
     "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
