--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/fontaine": "^0.5.0",
     "@nuxtjs/i18n": "9.5.3",
     "@nuxtjs/mdc": "^0.17.0",
+    "@nuxtjs/robots": "^5.2.10",
     "@nuxtjs/seo": "3.0.3",
     "@nuxtjs/sitemap": "^7.2.10",
     "@nuxtjs/turnstile": "^1.0.0",
