--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "@tiptap/extension-placeholder": "^2.11.7",
     "@vueuse/core": "^13.1.0",
     "better-sqlite3": "^11.9.1",
+    "crossws": "^0.3.4",
     "dexie": "^4.0.11",
     "drizzle-orm": "^0.43.1",
     "echarts-liquidfill": "^3.1.0",
     "h3-zod": "^0.5.3",
     "luxon": "^3.6.1",
     "minisearch": "^7.1.2",
-    "nuxt": "^3.17.0",
+    "nuxt": "^3.17.1",
     "nuxt-auth-utils": "0.5.20",
     "nuxt-authorization": "0.3.3",
     "nuxt-booster": "^3.2.9",
@@ -54,7 +55,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250428.0",
+    "@cloudflare/workers-types": "^4.20250429.0",
     "@iconify-json/lucide": "^1.2.39",
     "@nuxt/devtools": "^2.4.0",
     "@nuxt/eslint": "^1.3.0",
